# derive-struct-fields-rs

./: Cargo.toml
derive_struct_fields/: Cargo.toml
derive_struct_fields/src/: lib.rs
derive_struct_fields_macro/: Cargo.toml
derive_struct_fields_macro/src/: lib.rs
